# linux_app_sdk

./: .config  .config.old  .gitignore  CMakeLists.txt  Kconfig  README_CN.md  build.sh
lib/communication/: ringbuffer.h  uart.cpp
pack/config/: config.yaml
pack/script/: app.sh
pack/script/tools/: S99skginit  update_kernel.sh
src/: master.cpp
src/drivers/audio/portaudio_wrapper/: portaudio_driver.cpp  portaudio_driver.h
src/drivers/camera/: camera.cpp  camera.h
src/drivers/mcu_communication/: mcu_protocol.cpp  mcu_protocol.h  serial_com.cpp
src/hal/: Kconfig  rkcapture.cpp  rkcapture.h  uart.h  v4l2_capture.cpp  v4l2_capture.h
src/modules/: Kconfig  module.cpp  module.h  module_manager.h  modules.h
src/modules/aichat/: AIchat.cpp  AIchat.h
src/modules/gui/: gui_thread.cpp
src/modules/gui/nxp_guiguider/custom/: custom.h
src/modules/test_module/: test_thread.cpp
src/modules/vision/: vision.cpp  vision.h
src/modules/vision/record/: record.h
src/nodes/: master_node.cpp
src/nodes/test/: rkmedia_vi_rga_test.c  sample_common.h
src/thread/: AIchat.cpp  communication.cpp  gui.cpp  motor_ctrl.cpp  robot_thread.h  serial_com.cpp  test_thread.cpp
src/utils/: utils.h  yamlconfig.h
